--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.21.1",
     "chalk": "^1.0.0",
+    "deep-extend": "^0.4.0",
+    "mocha": "^2.3.4",
+    "yeoman-generator": "^0.21.1",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
